// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Another Button with some emoji 1`] = `
<button
  className="css-1yjiefr"
  onClick={[Function]}
>
  <span
    aria-label="so cool"
    role="img"
  >
    😀 😎 👍 💯
  </span>
</button>
`;

exports[`Storyshots Another Button with text 1`] = `
<button
  className="css-1yjiefr"
  onClick={[Function]}
>
  Hello Button
</button>
`;

exports[`Storyshots Button with some emoji 1`] = `
<button
  className="css-1yjiefr"
  onClick={[Function]}
>
  <span
    aria-label="so cool"
    role="img"
  >
    😀 😎 👍 💯
  </span>
</button>
`;

exports[`Storyshots Button with text 1`] = `
<button
  className="css-1yjiefr"
  onClick={[Function]}
>
  Hello Button
</button>
`;

exports[`Storyshots Welcome to Storybook 1`] = `
<Welcome__Main>
  <Welcome__Title>
    Welcome to storybook
  </Welcome__Title>
  <p>
    This is a UI component dev environment for your app.
  </p>
  <p>
    We've added some basic stories inside the 
    <Welcome__InlineCode>
      src/stories
    </Welcome__InlineCode>
     directory.
    <br />
    A story is a single state of one or more UI components. You can have as many stories as you want.
    <br />
    (Basically a story is like a visual test case.)
  </p>
  <p>
    See these sample 
    <Welcome__NavButton
      onClick={[Function]}
    >
      stories
    </Welcome__NavButton>
     for a component called
     
    <Welcome__InlineCode>
      Button
    </Welcome__InlineCode>
    .
  </p>
  <p>
    Just like that, you can add your own components as stories.
    <br />
    You can also edit those components and see changes right away.
    <br />
    (Try editing the 
    <Welcome__InlineCode>
      Button
    </Welcome__InlineCode>
     stories located at
     
    <Welcome__InlineCode>
      src/stories/index.js
    </Welcome__InlineCode>
    .)
  </p>
  <p>
    Usually we create stories with smaller UI components in the app.
    <br />
    Have a look at the
     
    <Welcome__Link
      href="https://storybook.js.org/basics/writing-stories"
      rel="noopener noreferrer"
      target="_blank"
    >
      Writing Stories
    </Welcome__Link>
     
    section in our documentation.
  </p>
  <Welcome__Note>
    <b>
      NOTE:
    </b>
    <br />
    Have a look at the 
    <Welcome__InlineCode>
      .storybook/webpack.config.js
    </Welcome__InlineCode>
     to add webpack loaders and plugins you are using in this project.
  </Welcome__Note>
</Welcome__Main>
`;
